rettangoli per inziare

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,11 +2,14 @@
 <div class="container1Home">
   <img alt="immagine in montagna" src="../../assets/images/background_home_try.jpg" class="backgroundHome">
 </div>
+<div class="rettVerde">
+  <div class="contBianco"></div>
+</div>
 <div class="container2Home">
   <span> 10 Aprile 2021</span>
-  <span> Simo  & Leti</span>
+  <span> Simo & Leti</span>
   <span>
-    L’inizio di ogni nostra mossa non è un’analisi di ciò che gli occhi vedono ma un abbraccio di ciò che il cuore attende.
+    L'inizio di ogni nostra mossa non è un'analisi di ciò che gli occhi vedono ma un abbraccio di ciò che il cuore attende.
     (Luigi Giussani)
   </span>
 
