--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,7 +1,23 @@
 .container1Home{
-  width: 60%;
-  margin-left: 10%;
-  margin-right: 10%;
+  display: flex;
+  width: 100%;
   height: auto;
-  align-self: center;
+  justify-content: center;
+}
+
+.rettVerde {
+  height: 500px;
+  width: 100%;
+  background-color: #255d40;
+
+  .contBianco {
+    background-color: #fff;
+    color:#fff;
+    width: 40%;
+    height: 500px;
+    position: relative;
+    left: 50%;
+    bottom: 40px;
+    transform: translateX(-50%);
+  }
 }
