--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,20 +1,18 @@
 <app-responsive-toolbar></app-responsive-toolbar>
 <div class="container1Home">
-  <img alt="immagine in montagna" src="../../assets/images/background_home_try.jpg" class="backgroundHome">
+  <img alt="immagine in montagna" src="../../assets/images/background_home_try.jpg" class="backgroundHome" />
 </div>
 <div class="rettVerde">
-  <div class="contBianco"></div>
+  <div class="contBianco">
+      <p class="fs30 mb10"> 10 Aprile 2021</p>
+      <p class="fs50 green mb10">Simone e Letizia</p>
+      <p class="fs30">
+        L'inizio di ogni nostra mossa non è un'analisi di ciò che gli occhi
+        vedono, ma un abbraccio di ciò che il cuore attende. (Luigi Giussani)
+      </p>
+  </div>
 </div>
-<div class="container2Home">
-  <span> 10 Aprile 2021</span>
-  <span> Simo & Leti</span>
-  <span>
-    L'inizio di ogni nostra mossa non è un'analisi di ciò che gli occhi vedono ma un abbraccio di ciò che il cuore attende.
-    (Luigi Giussani)
-  </span>
-
-</div>
+<div class="container2Home"></div>
 <div class="timer">
-  <span>{{timer}}</span>
+  <span>{{ timer }}</span>
 </div>
-
