--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,3 +5,23 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
+
+.fs30 {
+  font-size: 30px;
+  font-weight: 400;
+  line-height: 40px;
+}
+
+.fs50 {
+  font-size: 50px;
+  font-weight: 500;
+  line-height: 60px;
+}
+
+.green {
+  color: #367e3d;
+}
+
+.mb10 {
+  margin-bottom: 40px;
+}
