aggiunta parte con i bottoni in fondo alla home

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,6 +13,23 @@
   </div>
 </div>
 <div class="container2Home"></div>
+<!-- links-->
+<div>
+  <span>SAVE THE DATE</span>
+  <mat-icon svgIcon="calendar"></mat-icon>
+  <a mat-raised-button [routerLink]="'/info'" >RSVP</a>
+</div>
+<div>
+  <span>CERIMONIA</span>
+  <mat-icon svgIcon="church" label="10 Aprile 2021"></mat-icon>
+  <a mat-raised-button href="https://goo.gl/maps/viiADx5rWwoHY1qY6">Maps</a>
+  <span></span>
+</div>
+<div>
+  <span>FESTEGGIAMENTI</span>
+  <mat-icon svgIcon="party"></mat-icon>
+  <a mat-raised-button href="https://goo.gl/maps/yfgZiwV4a8xNbUpW6">Maps</a>
+</div>
 <div class="timer">
   <span>{{ timer }}</span>
 </div>
