--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -1,1 +1,15 @@
 <app-responsive-toolbar></app-responsive-toolbar>
+<!--<google-map
+  height="500px"
+  width="100%"
+  [zoom]="zoom"
+  [center]="center"
+  [options]="options"
+><map-marker
+  [position]="churchMarker.position"
+  [label]="churchMarker.label"
+  [title]="churchMarker.title"
+  [options]="churchMarker.options"
+></map-marker></google-map>
+<button (click)="zoomIn()">Zoom in</button>
+<button (click)="zoomOut()">Zoom out</button>-->
