--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -5,6 +5,44 @@
   justify-content: center;
 }
 
+.container2Home {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  padding: 100px 200px;
+
+  .card {
+    display: flex;
+    flex-direction: vertical;
+    align-items: center;
+    justify-content: space-between;
+    border: none;
+    width: 270px;
+    min-width: 200px;
+    min-height: 300px;
+    padding: 20px 15px;
+
+    .cardTitle {
+      font-size: 20px;
+      font-weight: 600;
+      color: #767171;
+      text-align: center;
+    }
+
+    .t1 {
+      font-size: 25px;
+      text-align: center;
+    }
+
+    .t2 {
+      font-size: 22px;
+      line-height: 25px;
+      color: #767171;
+      text-align: center;
+    }
+  }
+}
+
 .rettVerde {
   height: 500px;
   width: 100%;
@@ -22,5 +60,56 @@
     transform: translateX(-50%);
     text-align: center;
     overflow: hidden;
+  }
+}
+
+.mat-icon {
+  width: 70px;
+  height: 70px;
+}
+
+.footer {
+  height: 200px;
+  width: 100%;
+  background-color: #255d40;
+}
+
+.quoted {
+  position: fixed;
+  height: auto;
+  width: auto;
+
+  .quote1 {
+    position: absolute;
+    top: 0px;
+    left: 10px;
+    height: 70px;
+    width: 70px;
+  }
+
+  .quote2 {
+    position: absolute;
+    right: 100px;
+    bottom: 10px;
+    height: 70px;
+    width: 70px;
+    transform: rotate(180deg);
+  }
+
+  .text {
+    padding: 30px;
+    position: relative;
+    text-align: center;
+  }
+}
+
+.separatore {
+  .dot {
+    height: 8px;
+    width: 8px;
+    background-color: #367e3d;
+    border-radius: 50%;
+    display: inline-block;
+    margin-right: 8px;
   }
 }
