--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,13 @@
 <app-responsive-toolbar></app-responsive-toolbar>
 <div class="container1Home">
-  <img alt="immagine in montagna" src="../../assets/images/background_home_try.jpg" class="backgroundHome" />
+  <img alt="immagine in montagna" src="../../assets/images/homeImg.jpg" class="backgroundHome" />
 </div>
 <div class="rettVerde">
   <div class="contBianco">
 
     <p class="fs30 mb10"> 10 Aprile 2021</p>
     <p class="fs50 green mb10">Simone e Letizia</p>
+
     <div class="separatore">
       <span class="dot"></span>
       <span class="dot"></span>
@@ -17,11 +18,8 @@
       <span class="dot"></span>
       <span class="dot"></span>
     </div>
+
     <div class="quoted">
-      <!-- <div class="quoted">
-        <img src="assets/images/double-quote.svg" class="quote1">
-        <img src="assets/images/double-quote.svg" class="quote2">
-      </div> -->
       <img src="assets/images/double-quote.svg" class="quote1">
       <img src="assets/images/double-quote.svg" class="quote2">
       <p class="text fs30">
