aggiunti i font, cambiato fs50 in fs70 con abuget (corsivo)

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
   <div class="contBianco">
 
     <p class="fs30 mb10"> 10 Aprile 2021</p>
-    <p class="fs50 green mb10">Simone e Letizia</p>
+    <p class="fs70 green mb10">Simone e Letizia</p>
 
     <div class="separatore">
       <span class="dot"></span>
@@ -34,24 +34,24 @@
   <div class="card">
     <span class="cardTitle">SAVE THE DATE</span>
     <mat-icon svgIcon="calendar"></mat-icon>
-    <span class="t1">data</span>
-    <span class="t2">Inizio celebrazione 11:00</span>
+    <span class="t1">10 Aprile 2020</span>
+    <span class="t2">Inizio celebrazione 10:30</span>
     <a [routerLink]="'/info'" class="button">RSVP</a>
   </div>
 
   <div class="card">
     <span class="cardTitle">CERIMONIA</span>
     <mat-icon class="icon-display" svgIcon="church" label="10 Aprile 2021"></mat-icon>
-    <span class="t1">nome chiesa</span>
-    <span class="t2">via della chiesa, 42 Torino</span>
+    <span class="t1">Santa Maria Goretti</span>
+    <span class="t2">Via Vittorio Actis, 20, 10146 Torino TO</span>
     <a href="https://goo.gl/maps/viiADx5rWwoHY1qY6" class="button">Maps</a>
   </div>
 
   <div class="card">
     <span class="cardTitle">FESTEGGIAMENTI</span>
     <mat-icon svgIcon="party"></mat-icon>
-    <span class="t1">Nome del locale</span>
-    <span class="t2">via dei festeggiamenti, 176/A</span>
+    <span class="t1">Cascina Marinetta</span>
+    <span class="t2">Via Bergoglio, 56, 12062 Cherasco CN</span>
 
     <a href="https://goo.gl/maps/yfgZiwV4a8xNbUpW6" class="button">Maps</a>
 
