--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -21,9 +21,10 @@
     min-width: 200px;
     min-height: 300px;
     padding: 20px 15px;
-
+    font-family: avenir-regular;
     .cardTitle {
       font-size: 20px;
+
       font-weight: 600;
       color: #767171;
       text-align: center;
