--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,13 +13,15 @@ body {
 @import "~bootstrap/scss/bootstrap";
 
 .fs30 {
+  font-family: avenir-regular;
   font-size: 30px;
   font-weight: 400;
   line-height: 40px;
 }
 
-.fs50 {
-  font-size: 50px;
+.fs70 {
+  font-family: abuget;
+  font-size: 70px;
   font-weight: 500;
   line-height: 60px;
 }
@@ -51,4 +53,20 @@ body {
 
 ::ng-deep .mat-raised-button {
   box-shadow: none;
+}
+@font-face {
+  font-family: abuget;
+  src: url(assets/fonts/Abuget.ttf) format("opentype");
+}
+@font-face {
+  font-family: avenir-bold;
+  src: url(assets/fonts/AvenirNextLTPro-Bold.otf) format("opentype");
+}
+@font-face {
+  font-family: avenir-regular;
+  src: url(assets/fonts/AvenirNextLTPro-Regular.otf) format("opentype");
+}
+@font-face {
+  font-family: avenir-italic;
+  src: url(assets/fonts/AvenirNextLTPro-It.otf) format("opentype");
 }
