condition for countdown

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -77,7 +77,8 @@
 
   <div class="countdown">
     <!-- <span>{{ timer }}</span> -->
-    <ng-container *ngIf="true">
+    <!--TODO: mostrare messaggio se data passata-->
+    <ng-container *ngIf="seconds>0">
       <!--GIORNI-->
       <div class="countBlock">
         <div class="number">
