--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -24,7 +24,7 @@
       <img src="assets/images/double-quote.svg" class="quote2">
       <p class="text fs30">
         L'inizio di ogni nostra mossa non è un'analisi di ciò che gli occhi
-        vedono, ma un abbraccio di ciò che il cuore attende.<br>(Luigi Giussani)
+        vedono, ma un abbraccio di ciò che il cuore attende.<br>-Luigi Giussani
       </p>
     </div>
   </div>
