--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -58,6 +58,21 @@
   </div>
 </div>
 
+<div class="container3Home" [routerLink]="'/listanozze'">
+  <img src="assets/images/regali.jpeg" width="50%" height="auto">
+  <div class="textualButton">
+    <span class="title">Vorrei farvi un regalo!</span>
+    <span class="subTitle">(qualcosa di dolce, qualcosa di raro [...])</span>
+  </div>
+</div>
+
+<div class="container4Home">
+  .........<br>
+  scritta<br>
+
+  bottone
+</div>
+
 <!-- <div class="footer"></div> -->
 
 <!--COUNTDOWN-->
