--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -24,7 +24,7 @@
       <img src="assets/images/double-quote.svg" class="quote2">
       <p class="text fs30">
         L'inizio di ogni nostra mossa non è un'analisi di ciò che gli occhi
-        vedono, ma un abbraccio di ciò che il cuore attende.<br>-Luigi Giussani
+        vedono, ma un abbraccio di ciò che il cuore attende.<br>Luigi Giussani
       </p>
     </div>
   </div>
@@ -59,7 +59,7 @@
 </div>
 
 <div class="container3Home" [routerLink]="'/listanozze'">
-  <img src="assets/images/regali.jpeg" width="50%" height="auto">
+  <img src="assets/images/regali.jpeg" class="immagine">
   <div class="textualButton">
     <span class="title">Vorrei farvi un regalo!</span>
     <span class="subTitle">(qualcosa di dolce, qualcosa di raro [...])</span>
@@ -67,7 +67,16 @@
 </div>
 
 <div class="container4Home">
-  .........<br>
+  <div class="separatore green2">
+    <span class="dot"></span>
+    <span class="dot"></span>
+    <span class="dot"></span>
+    <span class="dot"></span>
+    <span class="dot"></span>
+    <span class="dot"></span>
+    <span class="dot"></span>
+    <span class="dot"></span>
+  </div>
   scritta<br>
 
   bottone
