--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,3 +1,5 @@
+@import "src/assets/styles/colors.scss";
+
 .container1Home {
   display: flex;
   width: 100%;
@@ -25,7 +27,7 @@
     .cardTitle {
       font-size: 20px;
       font-family: avenir-bold;
-      color: #767171;
+      color: $gray1;
       text-align: center;
     }
 
@@ -37,7 +39,7 @@
     .t2 {
       font-size: 22px;
       line-height: 25px;
-      color: #767171;
+      color: $gray1;
       text-align: center;
     }
   }
@@ -46,7 +48,7 @@
 .rettVerde {
   height: 500px;
   width: 100%;
-  background-color: #255d40;
+  background-color: $green1;
 
   .contBianco {
     display: block;
@@ -66,18 +68,28 @@
 .container3Home {
   height: 700px;
   width: 100%;
-  background-color: #255d40;
+  background-color: $green1;
   padding: 30px;
   display: flex;
   align-items: center;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
+
+  .immagine {
+    height: 80%;
+    width: auto;
+  }
 }
 
 .container4Home {
   height: 500px;
   width: 100%;
   background-color: white;
+  display: flex;
+
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .mat-icon {
@@ -88,7 +100,7 @@
 .footer {
   height: 200px;
   width: 100%;
-  background-color: #255d40;
+  background-color: $green1;
 }
 
 .timer {
@@ -98,7 +110,7 @@
   flex-direction: column;
   height: 500px;
   width: 100%;
-  background-color: #255d40;
+  background-color: $green1;
   font-family: avenir-bold;
 
   .title {
@@ -123,13 +135,14 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
-    padding: 0 200px;
+    padding: 0 180px;
     margin: 50px 0;
 
     .countBlock {
       display: block;
       width: 180px;
       height: auto;
+      margin: 0 5px;
       .number {
         display: block;
         width: 100%;
@@ -188,24 +201,14 @@
   }
 }
 
-.separatore {
-  .dot {
-    height: 8px;
-    width: 8px;
-    background-color: #367e3d;
-    border-radius: 50%;
-    display: inline-block;
-    margin-right: 8px;
-  }
-}
-
 .textualButton {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   flex-direction: column;
   align-items: center;
-  background-color: #c7dabc;
+  background-color: $green4;
   padding: 10px 30px;
+  margin-top: 40px;
   cursor: pointer;
 
   .title {
@@ -223,6 +226,12 @@
   }
 
   &:hover {
-    background-color: red;
+    background-color: $green3;
+    .title {
+      color: white;
+    }
+    .subTitle {
+      color: white;
+    }
   }
 }
