--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -24,6 +24,7 @@
     min-height: 300px;
     padding: 20px 15px;
     font-family: avenir-regular;
+    margin: 10px;
     .cardTitle {
       font-size: 20px;
       font-family: avenir-bold;
