--- a/src/app/info/info.component.scss
+++ b/src/app/info/info.component.scss
@@ -1,1 +1,90 @@
+@import "src/assets/styles/colors.scss";
 
+.titolo {
+  width: 100%;
+  height: 100px;
+  color: $green2;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 10%;
+  .text {
+    font-family: avenir-bold;
+    font-size: 40px;
+    line-height: 150%;
+  }
+  .separatore {
+    display: flex;
+    justify-content: space-between;
+    .dot {
+      width: 10px;
+      height: 10px;
+      margin-right: 16px;
+    }
+  }
+}
+
+.formRSVP {
+  width: 90%;
+  padding: 10px;
+  background-color: $green3;
+  margin-bottom: 20px;
+  border-radius: 12px;
+
+  .control {
+    padding: 0 8px;
+    border-radius: 8px;
+    overflow: hidden;
+    margin-bottom: 8px;
+    &:focus-within {
+      background-color: $green4;
+    }
+  }
+
+  label {
+    font-size: 12px;
+    line-height: 150%;
+    font-family: avenir-regular;
+    font-weight: 800;
+  }
+}
+
+// ::ng-deep .mat-form-field {
+//   .mat-form-field-flex {
+//     // background-color: $green3;
+//   }
+// }
+
+::ng-deep .mat-form-field.mat-focused {
+  .mat-form-field-label {
+    color: $green1;
+  }
+  .mat-form-field-ripple {
+    background-color: $green1;
+  }
+  .mat-form-field-required-marker {
+    color: $green1;
+  }
+  .mat-input-element {
+    color: $green1;
+  }
+}
+
+::ng-deep .mat-form-field.mat-form-field-invalid {
+  .mat-input-element {
+    color: $error;
+  }
+  .mat-form-field-label {
+    color: $error;
+    .mat-form-field-required-marker {
+      color: $error;
+    }
+  }
+  .mat-form-field-ripple {
+    background-color: $error;
+  }
+}
+
+::ng-deep .mat-error {
+  color: $error;
+}
